@@ -1,5 +1,6 @@
 2010-05-28  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* mstcpip.h: Added missing include guard.
 	* af_irda.h: Remove the _WINSOCKAPI_ guarded typedefs and include
 	mingw_inc/_bsd_types.h, instead.
 
